# sandbox

./: .gitignore  CMakeLists.txt  hot-reloading.md
lib/: stb_sprintf.h
src/: game.c  game.h  main.c
src/game/: game.c  game.h
src/gamelib/: gamelib.c  gamelib.h  gamelib_impl.c
src/state/: state.h
src/utils/: hot_reload.c  windows_raylib_safe.h
